2000-12-03  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/List.pm (expire_subscriber_data): Bug fix: when all
	bounces expired, all were kept.

2000-12-02  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (dispatch):  Add simple command mode validation.

	* lib/Mj/List.pm (search):  Allow a count of results desired.

2000-12-01  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MTAConfig.pm (add_alias): Fix bug in VUT owner-list
	entry.

	* lib/Mj/BounceParser.pm (parse_smtp32): Fix possible infloop.

2000-11-25  Michael Yount <csf@moscow.com>

	* setup/newdomain.pl:  Allow domains to be added
	to the installation using the "make domain" shell command.

2000-11-22  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Format.pm: Correct various syntax errors.

2000-11-18  Michael Yount <csf@moscow.com>

	* README.CALLING:  Somewhat outdated file describing the 
	request hash calling conventions.

	* bin/mj_shell:  Add editing support for the get-edit
	command, which wraps a file in a put command, to allow
	easy editing and replacement using your favorite editor.

	* bin/mj_wwwadm, bin/mj_wwwusr:  Rewrite.  Move all formatting
	into Mj::Format.  List explicitly the supported commands.

	* files/en/error/*:  New error files.  Allow customization
	of error messages (only two are used at present).

	* files/en/format/*:  New format files.  Allow customization
	of command output (only commands that require special
	formatting in the WWW interfaces are included at present,
	such as the configshow, lists, and show commands.)

	* files/en/help/configset_*:  Change "Variable Groups" heading
	to "Category" and revise the categories used.

	* files/en/help/configshow:  Document "categories" mode, 
	including a list of all ten categories.

	* files/en/help/get:  Document "edit" mode, which wraps a
	file with a put command, to allow easy editing and replacement.

	* lib/Majordomo.pm:  (dispatch) Improve list validation.